--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.custommapsapp.android"
-      android:versionName="1.3.8" android:versionCode="82">
+      android:versionName="1.3.9-SNAPSHOT" android:versionCode="82">
     <uses-sdk
         android:targetSdkVersion="18" 
         android:minSdkVersion="4" />
